Create permissions UI to see and modify user privileges
